Added extra metabolites.

--- a/templates/index.html
+++ b/templates/index.html
@@ -366,7 +366,7 @@ Close</div>
         var all_mets = ['CrCH2', 'AcAc', 'Acn', 'Ala', 'Asp', 'Cho', 'Cr', 'GABA', 'GPC', 'Glc',
         'Gln', 'Glu', 'Gua', 'Ins', 'Lac', 'Lip09', 'Lip13a', 'Lip13b', 'Lip20', 'MM09',
         'MM12', 'MM14', 'MM17', 'MM20', 'NAA', 'NAAG', 'PCh', 'PCr', 'Scyllo', 'Tau',
-        'tCr', 'tNAA', 'tCho', 'Glx']//,'tNAA_opt','tCr_opt','tCho_opt']
+        'tCr', 'tNAA', 'tCho', 'Glx','tNAA_opt','tCr_opt','tCho_opt']
 
         function inputValid(){
             var num_list = /^[0-9.]+(,[0-9.]+)*$/i;
