Bugfix for searching for patients by DatabaseID.

--- a/templates/index.html
+++ b/templates/index.html
@@ -192,7 +192,9 @@ ul.justify { margin-left:-2.75em; }
                             <option value="'FT_WM'">FT WM</option>
                             <option value="'FT_WM','OCC WM'">WM</option>
                             <option value="'FT_WM','OCC WM','BG'">BG + WM</option>
-                            <option value="Cerebellum">CRBL</option>
+                            <option value="'Cerebellum'">CRBL</option>
+                            <option value="'Else','unset'">Else/Unk</option>
+
                         </select></span>
                         
                         <span title="Keywords of the query. e.g. '%glioma'">Keywords:
